[tool.poetry]
name = "tips"
version = "0.1.0"
description = "my yummy tips"
authors = ["aYukiYoshida <yuki.yoshida@access-company.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
