[tool.poetry]
name = "tips"
version = "0.1.0"
description = "my yummy tips"
authors = ["aYukiYoshida <yuki.yoshida@access-company.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = "^8.3.8"
pre-commit = "^2.19.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
taskipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
z2q = { cmd = "python ./scripts/z2q.py", help = "Convert article of Zenn to one of Qiita" }
